<resources>
    <string name="app_name">SealNiko</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="seal_login_text_new_user">新用户</string>
    <string name="seal_login_text_forget_password">找回密码</string>
    <string name="seal_login_text_login">登录</string>
    <string name="seal_login_countries_and_regions">国家/地区</string>
    <string name="seal_login_password">密码</string>
    <string name="seal_login_phone_number">手机号</string>
    <string name="seal_login_nick_name">昵称</string>
    <string name="seal_login_register">注册</string>
    <string name="seal_login_code">短信验证码</string>
    <string name="seal_login_send_code">发送验证码</string>
    <string name="seal_login_confirm">确认</string>
    <string name="seal_login_confirm_password">确认密码</string>
    <string name="seal_login_toast_name_is_null">昵称不能为空</string>
    <string name="seal_login_toast_name_contain_spaces">昵称不能包含空格</string>
    <string name="seal_login_toast_phone_number_is_null">手机号不能为空</string>
    <string name="seal_login_toast_code_is_null">验证码为空</string>
    <string name="seal_login_toast_password_is_null">密码不能为空</string>
    <string name="seal_login_toast_password_cannot_contain_spaces">密码不能包含空格</string>
    <string name="seal_login_toast_phone_or_psw_error">手机或者密码错误</string>
    <string name="seal_login_toast_success">"登录成功"</string>
    <string name="seal_login_toast_not_send_code">未向服务端获取验证码</string>
    <string name="seal_login_toast_passwords_invalid">密码必须为6-16位字符，区分大小写</string>
    <string name="seal_login_toast_new_password_not_null">新密码不能为空</string>
    <string name="seal_login_toast_confirm_password_not_null">确认密码不能为空</string>
    <string name="seal_login_toast_passwords_do_not_match">填写的确认密码与新密码不一致</string>
    <string name="login_error_send_message_frequency">短信发送频率超限</string>
    <string name="login_error_captcha_overdue">验证码过期,请重新请求</string>
    <string name="login_verification_code_error">验证码错误</string>
    <string name="seal_login_kick_by_other">您的账号在别的设备上登录，您被迫下线!</string>
    <string name="seal_login_connect_time_out">连接超时，请重新登录</string>
    <string name="common_chat_room">聊天室</string>
    <string name="discovery_chat_room_one">聊天室 I</string>
    <string name="discovery_chat_room_two">聊天室 II</string>
    <string name="discovery_chat_room_three">聊天室 III</string>
    <string name="discovery_chat_room_four">聊天室 IV</string>
    <string name="discovery_chat_room_join_failure">加入聊天室失败</string>
    <string name="discovery_join_chat_room_error">聊天室 ID 为空,请稍后重试</string>
    <string name="new_friends">新的朋友</string>
    <string name="group">群组</string>
    <string name="public_service">公众号</string>
    <string name="seal_search_nick_name">昵称： </string>
    <string name="seal_group_list_include">包含：</string>
    <string name="china">中国</string>
    <string name="lang_en">EN</string>
    <string name="lang_english">English</string>
    <string name="lang_chs">简体中文</string>
    <string name="seal_search">搜索</string>
    <string name="beijing">北京</string>
    <string name="common_confirm">确认</string>
    <string name="common_cancel">取消</string>
    <string name="common_done">完成</string>
    <string name="common_save">保存</string>
    <string name="common_publish">发布</string>
    <string name="common_request_success">请求成功</string>
    <string name="common_add_successful">添加成功</string>
    <string name="common_remove_successful">移除成功</string>
    <string name="common_delete_successful">删除成功</string>
    <string name="common_album">相册</string>
    <string name="common_share_success">分享成功</string>
    <string name="common_share_failed">分享失败</string>
    <string name="common_member_count" formatted="true">%d 人</string>
    <string name="common_network_unavailable">当前网络不可用</string>
    <string name="common_network_check">请检查网络设置</string>
    <string-array name="tab_names">
        <item>会话</item>
        <item>通讯录</item>
        <item>发现</item>
        <item>我</item>
    </string-array>
    <string name="common_network_error_and_retry_after">网络问题请稍后重试</string>
    <string name="seal_evaluate_evaluation">评价</string>
    <string name="seal_evaluate_submit_evaluation">提交评价</string>
    <string name="seal_evaluate_resolved_title">请问客服是否解决了您的问题</string>
    <string name="seal_evaluate_resolved">已解决</string>
    <string name="seal_evaluate_unresolved">未解决</string>
    <string name="seal_evaluate_star_title">请您对客服进行评价</string>
    <string name="seal_evaluate_problem_title">存在哪些问题</string>
    <string name="seal_evaluate_title_select_must">存在哪些问题(必选)</string>
    <string name="seal_evaluate_lable_must">必须选择标签</string>
    <string name="seal_evaluate_input_must">必须输入建议</string>
    <string name="seal_conversation_remote_side_is_typing">对方正在输入&#046;&#046;&#046;</string>
    <string name="seal_conversation_remote_side_speaking">对方正在讲话&#046;&#046;&#046;</string>
    <string name="seal_conversation_title_discussion_group">讨论组</string>
    <string name="seal_conversation_title_system">系统消息</string>
    <string name="seal_conversation_title_feedback">意见反馈</string>
    <string name="seal_conversation_title_defult">聊天</string>
    <string name="seal_conversation_sub_group">"群组"</string>
    <string name="seal_conversation_sub_private">"我的私人会话"</string>
    <string name="seal_conversation_sub_discussion">"我的讨论组"</string>
    <string name="seal_conversation_sub_system">"系统消息"</string>
    <string name="seal_conversation_sub_defult">"聊天"</string>
    <string name="seal_conversation_read_receipt_detail">回执详情</string>
    <string name="seal_conversation_read_receipt_unread_persons_format">%1$d 人未读</string>
    <string name="seal_conversation_read_receipt_read_persons_format">%1$d 人已读</string>
    <string name="seal_conversation_read_receipt_no_person_read">全部未读</string>
    <string name="seal_conversation_read_receipt_no_person_unread">全部已读</string>
    <string name="seal_new_friend_list_no_data">暂无数据</string>
    <string name="seal_new_friend_agree">接&#160;&#160;&#160;受</string>
    <string name="seal_new_friend_agree_ignore">忽&#160;&#160;&#160;略</string>
    <string name="seal_new_friend_request">已请求</string>
    <string name="seal_new_friend_ignore">已忽略</string>
    <string name="seal_new_friend_added">已添加</string>
    <string name="seal_new_friend_deleted">已删除</string>
    <string name="seal_new_friend_add">添加</string>
    <string name="seal_main_title_start_chat">发起聊天</string>
    <string name="seal_main_title_create_group">创建群组</string>
    <string name="seal_main_title_add_friends">添加好友</string>
    <string name="seal_main_title_scan">扫一扫</string>
    <string name="seal_main_mine_set_account">账号设置</string>
    <string name="seal_main_mine_setting_language">多语言</string>
    <string name="seal_main_mine_feedback">意见反馈</string>
    <string name="seal_main_mine_about">关于 SealTalk</string>
    <string name="seal_main_mine_customer_xn">小能客服</string>
    <string name="seal_main_mine_online_custom_service">在线客服</string>
    <string name="seal_userinfo_item_user_portrait">用户头像</string>
    <string name="seal_mine_set_account_change_password">密码修改</string>
    <string name="seal_mine_set_account_privacy">安全与隐私</string>
    <string name="seal_mine_set_account_new_message_show">新消息通知</string>
    <string name="seal_mine_set_account_clear_cache">清除缓存</string>
    <string name="seal_mine_set_account_chat_bg">聊天背景</string>
    <string name="seal_mine_set_account_clear_message_cache">清理聊天记录</string>
    <string name="seal_mine_set_account_logout">退出登录</string>
    <string name="seal_mine_set_account_push_language">设置 Push 中文</string>
    <string name="seal_mine_set_account_push_content">显示 Push 内容</string>
    <string name="seal_mine_set_account_push_message">接收 Push 消息</string>
    <string name="seal_mine_change_language">多语言</string>
    <string name="seal_mine_about_update_log">更新日志</string>
    <string name="seal_mine_about_function_introduce">功能介绍</string>
    <string name="seal_mine_about_rongcloud_web">官方网站</string>
    <string name="seal_mine_about_seal_talk_version">SealTalk 版本</string>
    <string name="seal_mine_about_sdk_version">SDK 版本</string>
    <string name="seal_mine_about_close_debug_mode">关闭 debug 模式</string>
    <string name="seal_mine_about_user_online_status">设置用户在线状态</string>
    <string name="seal_title_private_chat">发起聊天</string>
    <string name="seal_title_group_chat">创建群组</string>
    <string name="seal_title_add_contacts">添加好友</string>
    <string name="profile_search_message">查找聊天记录</string>
    <string name="profile_message_notice">消息免打扰</string>
    <string name="profile_set_top">顶置聊天</string>
    <string name="profile_clean_message">清除聊天记录</string>
    <string name="profile_screen_shot_notification">截屏通知</string>
    <string name="profile_screen_shot_notification_tips">开启后，在对话中截屏，所有成员都是收到通知</string>
    <string name="profile_clean_timing">定时清理群消息</string>
    <string name="profile_clean_timing_tips">设置定时清理后，系统会定时清理规定时间前的群消息，清理后的消息无法恢复，请谨慎设置</string>
    <string name="profile_user_details">用户详情</string>
    <string name="profile_clean_private_chat_history">确定删除聊天记录吗</string>
    <string name="profile_clean_group_chat_history">确定删除群聊天记录吗</string>
    <string name="profile_clean_discussion_chat_history">确定删除讨论组聊天记录吗</string>
    <string name="profile_all_group_member">全部群成员</string>
    <string name="profile_group_member_online_status">群成员在线状态</string>
    <string name="profile_group_portrait">群头像</string>
    <string name="profile_group_name">群名称</string>
    <string name="profile_group_notice">群公告</string>
    <string name="profile_group_code">群二维码</string>
    <string name="profile_quit_group">删除并退出</string>
    <string name="profile_dismiss_group">解散并退出</string>
    <string name="profile_group_info">群组信息</string>
    <string name="profile_group_total_member">群成员</string>
    <string name="profile_update_portrait_success">头像更新成功</string>
    <string name="profile_upload_portrait_failed">上传头像失败</string>
    <string name="profile_hint_new_group_name">新的群名称</string>
    <string name="profile_group_name_word_limit_format" formatted="true">群名称应为 %d-%d 字</string>
    <string name="profile_group_name_emoji_too_short">群名称表情过短</string>
    <string name="profile_input_hint_group_notice">请编辑群公告</string>
    <string name="profile_group_notice_post_confirm">该公告会通知全部群成员，是否发布？</string>
    <string name="profile_group_notice_prefix">\@所有人\n</string>
    <string name="profile_confirm_quit_group">确认退出群组?</string>
    <string name="profile_confirm_dismiss_group">确认解散群组?</string>
    <string name="profile_set_display_name">设置备注名</string>
    <string name="profile_picture_detail">图片详情</string>
    <string name="profile_picture_more">更多</string>
    <string name="profile_set_group_info">个人信息</string>
    <string name="profile_set_display_des">描述</string>
    <string name="profile_set_display_phone">手机号</string>
    <string name="profile_detail_start_chat">发起聊天</string>
    <string name="setting">设置</string>
    <string name="setting_person_info">编辑个人资料</string>
    <string name="setting_notification">消息通知</string>
    <string name="setting_hooby_manage">兴趣圈子管理</string>
    <string name="setting_contact_friend">手机通讯录好友</string>
    <string name="setting_modify_pwd">修改密码</string>
    <string name="setting_company_contact">官方联系</string>
    <string name="setting_clear_cache">清理缓存</string>
    <string name="setting_logout">退出登录</string>
    <string name="edit_person_info">编辑个人资料</string>
    <string name="notification_setting">消息通知设置</string>
    <string name="vibrate">震动</string>
    <string name="sound">声音</string>
    <string name="show_noti_detail">显示消息通知详情</string>
    <string name="no_disturb">消息免打扰</string>
    <string name="default_text">---</string>
    <string name="nickname">昵称</string>
    <string name="head_img">头像</string>
    <string name="gender">性别</string>
    <string name="city">城市</string>
    <string name="not_required">以下非必选项</string>
    <string name="personal_profile">个人简介</string>
    <string name="school">学校</string>
    <string name="age">年龄</string>
</resources>