<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <cn.rongcloud.im.niko.ui.widget.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/setting" />

    <cn.rongcloud.im.niko.ui.view.SettingItemView
        android:id="@+id/siv_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_mine_setting_item_height"
        app:item_image_width="24dp"
        app:item_image_height="24dp"
        app:item_tag_image_width="12dp"
        app:item_tag_image_height="12dp"
        app:item_content="@string/setting_person_info"
        app:item_image="@drawable/img_setting_person"
        app:item_right_image="@drawable/img_item_setting_enter" />

    <cn.rongcloud.im.niko.ui.view.SettingItemView
        android:id="@+id/siv_notification"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_mine_setting_item_height"
        app:item_image_width="24dp"
        app:item_image_height="24dp"
        app:item_tag_image_width="12dp"
        app:item_tag_image_height="12dp"
        app:item_content="@string/setting_notification"
        app:item_image="@drawable/img_setting_notification"
        app:item_right_image="@drawable/img_item_setting_enter" />

    <cn.rongcloud.im.niko.ui.view.SettingItemView
        android:id="@+id/siv_hobby"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_mine_setting_item_height"
        app:item_image_width="24dp"
        app:item_image_height="24dp"
        app:item_tag_image_width="12dp"
        app:item_tag_image_height="12dp"
        app:item_content="@string/setting_hooby_manage"
        app:item_image="@drawable/img_setting_hobby"
        app:item_right_image="@drawable/img_item_setting_enter" />

    <cn.rongcloud.im.niko.ui.view.SettingItemView
        android:id="@+id/siv_contact"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_mine_setting_item_height"
        app:item_image_width="24dp"
        app:item_image_height="24dp"
        app:item_tag_image_width="12dp"
        app:item_tag_image_height="12dp"
        app:item_content="@string/setting_contact_friend"
        app:item_image="@drawable/img_setting_contact"
        app:item_right_image="@drawable/img_item_setting_enter" />

    <cn.rongcloud.im.niko.ui.view.SettingItemView
        android:id="@+id/siv_modify_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_mine_setting_item_height"
        app:item_image_width="24dp"
        app:item_image_height="24dp"
        app:item_tag_image_width="12dp"
        app:item_tag_image_height="12dp"
        app:item_content="@string/setting_modify_pwd"
        app:item_image="@drawable/img_setting_modify_pwd"
        app:item_right_image="@drawable/img_item_setting_enter" />

    <cn.rongcloud.im.niko.ui.view.SettingItemView
        android:id="@+id/siv_company"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_mine_setting_item_height"
        app:item_image_width="24dp"
        app:item_image_height="24dp"
        app:item_tag_image_width="12dp"
        app:item_tag_image_height="12dp"
        app:item_content="@string/setting_company_contact"
        app:item_image="@drawable/img_setting_company"
        app:item_right_image="@drawable/img_item_setting_enter" />

    <cn.rongcloud.im.niko.ui.view.SettingItemView
        android:id="@+id/siv_clear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_mine_setting_item_height"
        app:item_image_width="24dp"
        app:item_image_height="24dp"
        app:item_tag_image_width="12dp"
        app:item_tag_image_height="12dp"
        app:item_content="@string/setting_clear_cache"
        app:item_image="@drawable/img_setting_clear"
        app:item_right_image="@drawable/img_item_setting_enter" />

    <cn.rongcloud.im.niko.ui.view.SettingItemView
        android:id="@+id/siv_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_mine_setting_item_height"
        app:item_image_width="24dp"
        app:item_image_height="24dp"
        app:item_tag_image_width="12dp"
        app:item_tag_image_height="12dp"
        app:item_content="@string/setting_logout"
        app:item_image="@drawable/img_setting_logout"
        app:item_right_image="@drawable/img_item_setting_enter" />

</LinearLayout>